# fixmaster_backend_django_fastapi

./: .dockerignore  .env  .env.test  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  deploy.yml  docker-compose.develop.yml  docker-compose.yml  manage.py  mqtt_connector.py  pyproject.toml  rate_limit_test.py  readme.md  redis_connector.py  requirements.txt  tess.py  test.py  test.txt  test_redis_connector.py
.github/workflows/: cd.yml  ci.yml  production.yml
app/: project_code.txt  pyproject.toml  readme.md  requirements.txt  test.py
app/bot/: config.py  dataclasses_csm.py  services.py  tests.py  urls.py
app/config/: __init__.py  asgi.py  celery.py  csm_metrics.py  middlewares.py  settings.py  urls.py  wsgi.py
app/logs/: django.log.2025-08-13  django.log.2025-08-14  django.log.2025-08-21  django.log.2025-08-25  django.log.2025-08-28  django.log.2025-08-29  django.log.2025-08-30  django.log.2025-08-31  django.log.2025-09-01  django.log.2025-09-02  django.log.2025-09-05  django.log.2025-09-08
app/nginx/: develop.conf  production.conf
app/nofication_service/: config.py  main.py  notify.env
app/src/: apps.py  tasks.py  urls.py
bot/: __init__.py  config.py  dataclasses_csm.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py  webhook_view.py
conf/alertmanager/: config.yaml
conf/loki/: loki-config.yaml
conf/nginx/: develop.conf
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
devops/: Dockerfile  docker-compose.yml
devops/nginx/: default.conf
nginx/: default.template
src/: apps.py  tasks.py  urls.py  views.py
(+125 files in other folders)
